--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgXX1mv3XcwR4VAlz0Mkdv",
+      "authorship_tag": "ABX9TyOC4nbDNIWbnxx3PEvt/iYw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,16 @@
     {
       "cell_type": "code",
       "source": [
+        "import sympy\n",
+        "\n",
         "class Calculator:\n",
+        "    def _init_(self):\n",
+        "        pass\n",
+        "\n",
         "    def calculate(self, expression):\n",
         "        try:\n",
-        "            return eval(expression)\n",
+        "            result = sympy.sympify(expression)\n",
+        "            return result.evalf() if isinstance(result, sympy.Basic) else result\n",
         "        except Exception as e:\n",
         "            return f\"Error: {e}\"\n",
         "\n",
@@ -40,24 +46,26 @@
         "        expression = input(\"Enter a mathematical expression: \")\n",
         "        result = self.calculate(expression)\n",
         "        print(\"Result:\", result)\n",
+        "\n",
+        "\n",
         "    calculator = Calculator()\n",
         "    calculator.run()"
       ],
       "metadata": {
+        "id": "JiYboMwnC4tp",
+        "outputId": "50fdc1d7-a4b8-4f90-d15d-4ac369fa11f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "4FUwImtz2KSj",
-        "outputId": "f4acb324-6e95-4155-b031-7b2b0819183e"
+        }
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter a mathematical expression: 1+2\n",
-            "Result: 3\n"
+            "Result: 3.00000000000000\n"
           ]
         }
       ]
