--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOC4nbDNIWbnxx3PEvt/iYw",
+      "authorship_tag": "ABX9TyNuR/W6glD5HrWamGEVys9v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,43 +29,76 @@
     {
       "cell_type": "code",
       "source": [
-        "import sympy\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.tokenize import word_tokenize, sent_tokenize\n",
+        "from nltk.stem import PorterStemmer\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
-        "class Calculator:\n",
-        "    def _init_(self):\n",
-        "        pass\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('stopwords')\n",
         "\n",
-        "    def calculate(self, expression):\n",
-        "        try:\n",
-        "            result = sympy.sympify(expression)\n",
-        "            return result.evalf() if isinstance(result, sympy.Basic) else result\n",
-        "        except Exception as e:\n",
-        "            return f\"Error: {e}\"\n",
+        "def preprocess_text(text):\n",
+        "    words = word_tokenize(text.lower())\n",
+        "    stop_words = set(stopwords.words('english'))\n",
+        "    words = [word for word in words if word.isalnum() and word not in stop_words]\n",
         "\n",
-        "    def run(self):\n",
-        "        expression = input(\"Enter a mathematical expression: \")\n",
-        "        result = self.calculate(expression)\n",
-        "        print(\"Result:\", result)\n",
+        "    stemmer = PorterStemmer()\n",
+        "    words = [stemmer.stem(word) for word in words]\n",
         "\n",
+        "    return ' '.join(words)\n",
         "\n",
-        "    calculator = Calculator()\n",
-        "    calculator.run()"
+        "def text_summarizer(text, num_sentences=2):\n",
+        "    preprocessed_text = preprocess_text(text)\n",
+        "\n",
+        "    sentences = sent_tokenize(preprocessed_text)\n",
+        "\n",
+        "    tfidf_vectorizer = TfidfVectorizer()\n",
+        "    tfidf_matrix = tfidf_vectorizer.fit_transform(sentences)\n",
+        "\n",
+        "    sentence_scores = tfidf_matrix.toarray().sum(axis=1)\n",
+        "\n",
+        "    top_sentence_indices = sentence_scores.argsort()[-num_sentences:][::-1]\n",
+        "\n",
+        "    top_sentence_indices.sort()\n",
+        "\n",
+        "    summarized_text = ' '.join([sentences[i] for i in top_sentence_indices])\n",
+        "\n",
+        "    return summarized_text\n",
+        "user_input = input(\"Enter the text you want to summarize:\\n\")\n",
+        "\n",
+        "summary = text_summarizer(user_input)\n",
+        "print(\"\\nSummary:\")\n",
+        "print(summary)"
       ],
       "metadata": {
-        "id": "JiYboMwnC4tp",
-        "outputId": "50fdc1d7-a4b8-4f90-d15d-4ac369fa11f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XkfSK3CY7TUM",
+        "outputId": "c9970725-677b-4871-850c-3e8aa45805f7"
       },
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a mathematical expression: 1+2\n",
-            "Result: 3.00000000000000\n"
+            "Enter the text you want to summarize:\n",
+            "the use and development of computer systems that are able to learn and adapt without following explicit instructions, by using algorithms and statistical models to analyse and draw inferences from patterns in data:\n",
+            "\n",
+            "Summary:\n",
+            "use develop comput system abl learn adapt without follow explicit instruct use algorithm statist model analys draw infer pattern data\n"
           ]
         }
       ]
